[package]
name = "websocket-playground"
version = "0.1.0"
edition = "2021"

[dependencies]
# this is the development version of Yew
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
web-sys = { version = "0.3.77", features = ["HtmlSelectElement"]}
gloo-net = { version = "0.6.0", features = ["websocket"] }
futures-util = "0.3.31"
futures = "0.3.31"
